k8s/backend-monitor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-monitor-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backend-monitor
  template:
    metadata:
      labels:
        component: backend-monitor
    spec:
      containers:
        - name: backend-monitor
          image: armando1514/backend-monitor:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: local-files
              mountPath: /app/addresses.csv
      volumes:
        - name: local-files
          ## YOU MUST CHANGE THIS WITH YOUR ABSOLUTE PATH TO THE addresses.csv path
          hostPath:
            path: s #TO BE EDIT WITH THE ABSOLUTE PATH OF THE ../BACKENDMONITOR/ADDRESSES.CSV BASED ON THE MACHINE
