k8s/monitoring-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prometheus-alertmanager-pod
spec:
  containers:
    - name: prometheus-container
      image: armando1514/prometheus
      ports:
        - containerPort: 9090
      command:
        - '/bin/sh'
        - '-c'
        - |
          # mkdir -p /etc/prometheus
          echo "$${PROMETHEUS_CONFIG}" > /etc/prometheus/prometheus-config.yml
          /bin/prometheus --config.file=/etc/prometheus/prometheus-config.yml

    - name: alert-manager-container
      image: prom/alertmanager:latest
      ports:
        - containerPort: 9093
      command:
        - '/bin/sh'
        - '-c'
        - |
          # mkdir -p /etc/alertmanager
          echo "$${ALERTMANAGER_CONFIG}" > /etc/alertmanager/alertmanager-config.yml
          /bin/alertmanager --config.file=/etc/alertmanager/alertmanager-config.yml
