k8s/backend-monitor-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-monitor-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: backend-monitor
  ports:
    - port: 3001
      targetPort: 3000
